5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1595_2894.log
== TEST (2019-03-21 16:24:50) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
valortotal= valor+frete
total = 845.00
print(valortotal)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:24:56) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
valortotal= valor+frete
total = 845.00

# Impressao do valor total:
print(valortotal)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:25:14) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
valortotal= valor+frete
total = 845.00

# Impressao do valor total:
print(valortotal)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:25:30) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
valortotal= valor+frete
total = 845.00

# Impressao do valor total:
print(valortotal)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:25:44) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
valortotal= valor+frete
total = 845.00
print(valortotal)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:25:50) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
valortotal= valor+frete
total = 845.00
print(valortotal)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:27:34) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor+frete)*njogos)
total = 845.00
print(valortotal)
-- OUTPUT:
369
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:27:45) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor+frete)*njogos)
total = 845.00
print(valortotal)
-- OUTPUT:
369
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:29:21) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
total = 845.00
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:30:23) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
total = 845.00
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:30:30) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
total = 845.00
print(valortotal)
-- EXECUTION TIME:
0.119297
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:31:40) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
total = 845.00
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:32:36) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:32:45) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- EXECUTION TIME:
0.154151
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:36:12) 
-- CODE:
x=input("Instruções: ")
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:37:06) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:37:13) 
-- CODE:
valor = float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- EXECUTION TIME:
0.197281
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:37:55) 
-- CODE:
valor =input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- ERROR:
File "XXXX", line 1
    valor =input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:38:06) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:19:21) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo? "))
jogo1=input()
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    jogo1=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:19:31) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo? "))
jogo1=input()
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    jogo1=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:20:07) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo? "))
jogo1=input()
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(round(valortotal, 3)
-- ERROR:
File "XXXX", line 7
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:20:14) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo? "))
jogo1=input()
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(round(valortotal, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    jogo1=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:20:44) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(round(valortotal, 3))
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:21:09) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:21:17) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- EXECUTION TIME:
0.244895
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:22:19) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:22:24) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo? "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- EXECUTION TIME:
0.282502
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:22:51) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo?: "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:23:00) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo: "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:23:05) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo: "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:23:11) 
-- CODE:
valor =float(input("Qual o valor unitario do jogo: "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- EXECUTION TIME:
0.133757
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:23:45) 
-- CODE:
valor =float(input("valor unitario do jogo: "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:23:50) 
-- CODE:
valor =float(input("valor unitario do jogo: "))
frete=45.00
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- EXECUTION TIME:
0.212568
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:52:28) 
-- CODE:
valor =float(input("valor unitario do jogo: "))
frete=45.0
njogos=8
valortotal= int((valor*njogos)+frete)
print(valortotal)
-- OUTPUT:
54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:53:14) 
-- CODE:
valor =float(input("valor unitario do jogo: "))
frete=45.0
njogos=8
valortotal= round((valor*njogos)+frete, 1)
print(valortotal)
-- OUTPUT:
54.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:53:21) 
-- CODE:
valor =float(input("valor unitario do jogo: "))
frete=45.0
njogos=8
valortotal= round((valor*njogos)+frete, 1)
print(valortotal)
-- EXECUTION TIME:
0.153366
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.8
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:57:56) 
-- CODE:
var=float(input("valor unitário:"))
frete=45.0
njogos=8.0
valortotal=(var*8)+frete
print(valortotal)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:58:07) 
-- CODE:
var=float(input("valor unitario:"))
frete=45.0
njogos=8.0
valortotal=(var*8)+frete
print(valortotal)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:58:12) 
-- CODE:
var=float(input("valor unitario:"))
frete=45.0
njogos=8.0
valortotal=(var*8)+frete
print(valortotal)
-- EXECUTION TIME:
0.14743
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:24) 
-- CODE:
var=float(input("valor unitario:"))
frete=45.0
njogos=8.0
valortotal=(var*8)+frete
print(valortotal)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:53:30) 
-- CODE:
var=float(input("valor unitario:"))
frete=45.0
njogos=8.0
valortotal=(var*8)+frete
print(valortotal)
-- EXECUTION TIME:
0.172149
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
